Issue w. button overflow

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1318,7 +1318,7 @@ body.is-touch {
 
   .projectDisplay {
     flex-direction: column;
-    overflow: scroll;
+    // overflow: auto;
     flex-flow: wrap;
     .projectImages {
       align-self: center;
